--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"test:e2e": "playwright test",
-		"prepare": "svelte-kit sync || true && husky"
+		"prepare": "svelte-kit sync || true && husky install"
 	},
 	"lint-staged": {
 		"*.{js,ts,svelte}": [
