--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,19 @@
-name: CI
+- name: Install dependencies
+  run: |
+    npm install
 
-on:
-  pull_request:
-    branches:
-      - dev
-      - main
+- name: Install Playwright browsers
+  run: |
+    npx playwright install --with-deps
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+- name: Run lint
+  run: |
+    npm run lint
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+- name: Run build
+  run: |
+    npm run build
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22'
-
-      - name: Install dependencies
-        run: |
-          npm install
-
-      - name: Run build
-        run: |
-          npm run build
-
-      - name: Run tests
-        run: |
-          npm test
+- name: Run tests
+  run: |
+    npm test
